<resources>
    <string name="app_name">Login UI</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_name">Welcome Gustavo</string>
    <string name="text_about">
        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
        alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
    </string>
    <string name="app_logo_duck">App logo, duck</string>
    <string name="userlogo">UserLogo</string>
    <string name="app_short_logo_duck">app short logo duck</string>
</resources>