<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dark_btn"
        app:layout_constraintBottom_toTopOf="@id/emailMaterial"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/app_logo_duck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/email"
        app:boxStrokeColor="?attr/colorSecondaryVariant"
        app:endIconTint="?attr/colorSecondaryVariant"
        app:hintTextColor="?attr/colorSecondaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/passwordMaterial"
        app:startIconDrawable="@drawable/ic_baseline_mark_email_unread_24"
        app:startIconTint="?attr/colorSecondaryVariant">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordMaterial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/password"
        app:boxStrokeColor="?attr/colorSecondaryVariant"
        app:endIconTint="?attr/colorSecondaryVariant"
        app:hintTextColor="?attr/colorSecondaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailMaterial"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:startIconTint="?attr/colorSecondaryVariant">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:onClick="login"
        android:text="@string/login_btn"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHighlight="@color/purple_500"
        android:textSize="16sp"
        app:backgroundTint="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordMaterial"
        app:layout_constraintBottom_toTopOf="@id/forgot_password"
        />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableLeft="@drawable/ic_baseline_bedtime_24"
        android:onClick="theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/app_logo"
        android:drawableStart="@drawable/ic_baseline_bedtime_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>